src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Havas Edge</fullName>
                </value>
                <value>
                    <fullName>AI Media</fullName>
                </value>
                <value>
                    <fullName>Voltage</fullName>
                </value>
                <value>
                    <fullName>TargetCOM</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>CPM Network</fullName>
                </value>
                <value>
                    <fullName>InterMedia</fullName>
                </value>
                <value>
                    <fullName>Precision Demand</fullName>
                </value>
                <value>
                    <fullName>Primetime Media</fullName>
                </value>
                <value>
                    <fullName>BrightWhistle</fullName>
                </value>
                <value>
                    <fullName>IMS</fullName>
                </value>
                <value>
                    <fullName>ClearChoice Internal Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Costs__c</fullName>
        <label>Allocation Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <description>18 Character ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Date_Is_in_the_Past__c</fullName>
        <formula>IF((StartDate +1) &lt;=TODAY(), &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Date Is in the Past</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Method__c</fullName>
        <description>How total costs are calculated.</description>
        <label>Cost_Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Cost</fullName>
                    <default>true</default>
                    <label>Total Cost</label>
                </value>
                <value>
                    <fullName>Per Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Per_Attendee__c</fullName>
        <formula>IF(Total_Attended__c=0,0,Total_Costs__c / Total_Attended__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Attendee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Unit__c</fullName>
        <description>This is the cost per unit for campaign cost calculations.</description>
        <label>Cost_Per_Unit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Consult__c</fullName>
        <formula>IF(NumberOfContacts=0,0,Total_Costs__c /  NumberOfContacts )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Consult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Start__c</fullName>
        <formula>IF(NumberOfOpportunities = 0, 0,Total_Costs__c /    NumberOfOpportunities  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creative_Name__c</fullName>
        <label>Creative Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deviation_from_Budget__c</fullName>
        <formula>BudgetedCost - Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation from Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Doctor_ID__c</fullName>
        <description>Used to store the doctor ID for a jumpstart brochure campaign</description>
        <label>Doctor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Doc_URL__c</fullName>
        <description>Field to hold the URL for the google Seminar registration document.</description>
        <label>Google Doc URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI__c</fullName>
        <description>ISCI code that ties to this campaign ID</description>
        <label>ISCI</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Location_Name__c  &amp; BR() &amp;
Location_Street__c   &amp; BR() &amp;
Location_City__c    &amp; &quot;, &quot; &amp;
TEXT(Location_State__c)  &amp; &quot; &quot; &amp; Location_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Postal_Code__c</fullName>
        <label>Location Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Costs__c</fullName>
        <label>Marketing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Format__c</fullName>
        <label>Media Format</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Outlet_Vendor__c</fullName>
        <label>Media Outlet Vendor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Vendor</label>
        <referenceTo>Media_Vendor__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <label>Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Per Inquiry</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Before_Event__c</fullName>
        <formula>StartDate - (MOD( StartDate - DATE(1900, 1, 6), 7)) + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monday Before Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_ID__c</fullName>
        <description>Used to store Dental Practice ID for Jumpstart Brochure campaigns</description>
        <label>Practice ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Public Ad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Creative__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Public Ad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Creative__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seminar_CTA_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a marketing campaign is for seminar purposes only.  Used to control Seminar reporting with crawl ads</description>
        <label>Seminar CTA Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Map_Location__c</fullName>
        <label>Seminar Map Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seminar_Only_Cost__c</fullName>
        <description>Additional Marketing Costs (i.e. cost of a crawl to a general CTA tv spot)</description>
        <label>Seminar Only Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date_DOW__c</fullName>
        <description>Should display Day of the week for a given Start Date</description>
        <formula>/*from the web*/
CASE(MOD(StartDate - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <label>Start Date DOW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Attended_Consult__c</fullName>
        <label>Total Attended Consult</label>
        <summarizedField>CampaignMember.Attended_Consult__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Attended__c</fullName>
        <label>Total Attended</label>
        <summarizedField>CampaignMember.Attended__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Booked_at_Seminar__c</fullName>
        <description>Should total up the number of campaign members where booked at seminar was checked.</description>
        <label>Total Booked at Seminar</label>
        <summaryFilterItems>
            <field>CampaignMember.Booked_at_Seminar__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cntacts_Prospective_Patients__c</fullName>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Consults &amp; Prospective Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Confirmed_Guests__c</fullName>
        <description>Should sum up the number of guests where the campaign status = confirmed</description>
        <label>Total Confirmed Guests</label>
        <summarizedField>CampaignMember.Num_Guests__c</summarizedField>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Confirmed_Members_and_Guests__c</fullName>
        <formula>Total_Confirmed__c +  Total_Confirmed_Guests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Confirmed Members and Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Confirmed__c</fullName>
        <label>Total Confirmed</label>
        <summarizedField>CampaignMember.Confirmed__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <formula>Venue_Support_Costs__c +  Marketing_Costs__c  +  Allocation_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Did_Not_Start__c</fullName>
        <label>Total Did Not Start</label>
        <summarizedField>CampaignMember.Start_Lost__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Guests__c</fullName>
        <description>Rool up of num guests from campaign members</description>
        <label>Total Guests</label>
        <summarizedField>CampaignMember.Num_Guests__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Show_Consult__c</fullName>
        <label>Total No Show (Consult)</label>
        <summarizedField>CampaignMember.No_Show_Consult__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Show_Seminar__c</fullName>
        <label>Total No-Show Seminar</label>
        <summarizedField>CampaignMember.No_Show__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PTSCG__c</fullName>
        <formula>/*Total_Guests__c +  NumberOfLeads +  NumberOfContacts*/
Total_Guests__c + Total_Registered_Distinct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registered_Distinct__c</fullName>
        <label>Total Registered Distinct</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Registered__c</fullName>
        <label>Total Registered Old</label>
        <summarizedField>CampaignMember.Registered__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Consult__c</fullName>
        <label>Total Scheduled Consult</label>
        <summarizedField>CampaignMember.Scheduled_Consult__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Started__c</fullName>
        <label>Total Started</label>
        <summarizedField>CampaignMember.Started__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Starts_Lost__c</fullName>
        <label>Total Starts Lost</label>
        <summarizedField>CampaignMember.Start_Lost__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Walk_Ins__c</fullName>
        <description>Summary field counting up the number of campaign members with a status of Walk-In</description>
        <label>Total Walk-Ins</label>
        <summaryFilterItems>
            <field>CampaignMember.Walk_In__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trans_Id__c</fullName>
        <description>Trans Id used on Website and / or Print Material</description>
        <label>Trans Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Support_Costs__c</fullName>
        <label>Venue &amp; Support Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>Active_PEC_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>PEC Outbound</value>
        </filters>
        <label>Active PEC Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Phone_Number__c</columns>
        <columns>Market__c</columns>
        <columns>Media_Format__c</columns>
        <columns>Media__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Esthetics</value>
        </filters>
        <label>Esthetics</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns_with_Numbers</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns with Numbers</label>
    </listViews>
    <listViews>
        <fullName>Andy_McMullen</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Phone_Number__c</columns>
        <columns>Media_Outlet_Vendor__c</columns>
        <columns>Creative_Name__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Media_Format__c</columns>
        <columns>Media__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>No Show-Cancellation Outbound</value>
        </filters>
        <label>Andy McMullen</label>
    </listViews>
    <listViews>
        <fullName>Andy_McMullen_Outbound</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Market__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>DBM,Orange,DBM-</value>
        </filters>
        <label>Andy McMullen Outbound</label>
    </listViews>
    <listViews>
        <fullName>Call_In_Show</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Total_PTSCG__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phone_Number__c</field>
            <operation>equals</operation>
            <value>8885156446</value>
        </filters>
        <label>Call-In Show</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Name</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Phone_Number__c</columns>
        <columns>Media_Outlet_Vendor__c</columns>
        <columns>Creative_Name__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Media_Format__c</columns>
        <columns>Media__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>Natl Cable TLC BP Dr 60</value>
        </filters>
        <label>Campaign Name</label>
    </listViews>
    <listViews>
        <fullName>Large_Campaigns</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>Total_PTSCG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NUM_LEADS</field>
            <operation>greaterOrEqual</operation>
            <value>20000</value>
        </filters>
        <label>Large Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Phone_Number__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Andrew</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Natl_Campaigns</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Natl</value>
        </filters>
        <label>Natl Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Paid_Search</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Public_Ad__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Creative_Name__c</columns>
        <columns>Trans_Id__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>Web Lead,Web-Email Program,Web-Display,Web-SEM,Web-Phone</value>
        </filters>
        <filters>
            <field>Agency__c</field>
            <operation>contains</operation>
            <value>ClearChoice Internal Team</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Brand,Generic</value>
        </filters>
        <filters>
            <field>Public_Ad__c</field>
            <operation>equals</operation>
        </filters>
        <label>Digital Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Retirement_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Retirement Center Seminar</value>
        </filters>
        <label>Retirement Campaigns</label>
    </listViews>
</CustomObject>